<resources>
    <string name="app_name">TrabajoFinalSosaGaston</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="correo">Correo</string>
    <string name="inmobiliaria_sosa">Inmobiliaria Sosa</string>
    <string name="contrase_a">Contraseña</string>
    <string name="el_usuario_o_clave_ingresados_son_invalidos">El Usuario o Clave ingresados son invalidos</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="Perfil">Perfil</string>
    <string name="Inmuebles" />

    <string name="inicio">Inicio</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="crear_inmueble">Crear Inmueble</string>
</resources>