<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/inicioicono"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/iconoperfil"
            android:title="@string/Perfil"
            />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/iconoinmueble"
            android:title="@string/inmuebles"
            />
        <item
            android:id="@+id/nav_crearInmueble"
            android:icon="@drawable/iconoinmueble"
            android:title="@string/crear_inmueble"
            />
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/iconoinquilino"
            android:title="@string/inquilinos"
            />

        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/iconocontrato"
            android:title="@string/contratos"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/iconologout"
            android:title="@string/cerrar_sesion"
            />

    </group>
</menu>